<resources>
    <string name="app_name">Dream</string>
    <string name="new_item">new</string>
    <string name="hint_id">帐号</string>
    <string name="create_id">请输入昵称</string>
    <string name="hint_password">密码</string>
    <string name="create_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="create_account">立即注册</string>
    <string name="already_account">已有一个帐号</string>
    <string name="btn_login">登录</string>
    <string name="btn_sign_up">注册</string>
    <string name="btn_sign_cancel">注销</string>
    <string name="tab_home">首页</string>
    <string name="tab_user">个人</string>
    <string name="cancel">取消</string>
    <string name="publish">发送</string>
    <string name="title">标题</string>
    <string name="title_ranking_list">排行榜</string>
    <string name="btn_more_story">更多</string>
    <string name="tv_user_join">发起故事</string>
    <string name="tv_user_start">参与故事</string>
    <string name="tv_user_like">获得点赞</string>
    <string name="tv_user_words">我的字数</string>
    <string name="btn_start_story">我发起的故事</string>
    <string name="btn_join_story">我参与的故事</string>
    <string name="btn_hot_story">我的热点故事</string>
    <string name="btn_setting">设置</string>
    <string name="search_view">搜索</string>
    <string name="story_keyword">关键词</string>
    <string name="first">第一名</string>
    <string name="second">第二名</string>
    <string name="third">第三名</string>
    <string name="story">故事</string>
    <string name="story_write">编写...</string>
</resources>
