<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_login"
            android:scaleType="center"
            android:tint="@color/colorWhite"
            android:src="@drawable/login_icon"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorHint">
            <EditText
                android:id="@+id/edt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorHint">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:gravity="center"
            android:text="@string/btn_login"
            android:background="@drawable/shape_login"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/link_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/create_account"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/link_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>