<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            android:textSize="18sp"
            android:layout_gravity="end"/>
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/edt_title"
        android:layout_below="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/title"
        />
    <EditText
        android:id="@+id/edt_content"
        android:layout_below="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"/>

</RelativeLayout>
