<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorUser">
        <ImageView
            android:id="@+id/user_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="90sp"
            android:src="@color/colorPrimary"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:id="@+id/round_image"
            app:riv_border_color="#0000"
            app:riv_oval="true"
            app:riv_border_width="2dp"
            android:src="@drawable/test"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/round_image"
            android:textColor="@color/colorPrimaryDark"
            android:text="user"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/user_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/user_name"
            android:text="self-introduction"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/user_join_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_join"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/user_start_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_start"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:id="@+id/user_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_like"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:id="@+id/user_all_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_words"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16sp"
            android:clickable="true">
            <ImageView
                android:id="@+id/user_icon_start"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_blur_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_start_story"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:clickable="true">
            <ImageView
                android:id="@+id/user_icon_join"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_blur_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_join_story"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:clickable="true">
            <ImageView
                android:id="@+id/user_icon_hot"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_blur_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_hot_story"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:clickable="true">
            <ImageView
                android:id="@+id/user_icon_setting"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_blur_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_setting"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>